# applejack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  insert_and_remove.rs  insert_indefinitely.rs  run_sequence_of_insert_and_remove.rs  should_be_equivalent_to_hashset.rs
src/: lib.rs  node.rs
tests/: test.rs  trie.rs
