[package]
name = "applejack"
version = "0.2.0"
authors = ["Hanif Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple implementation of Radix tree"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minivec = "0.4.0"
smallvec = "1.7.0"
